fix error play video ('#video-story') z-index!=auto

--- a/css/blocks/story.css
+++ b/css/blocks/story.css
@@ -33,7 +33,7 @@ line-height: 157%;
 .story-text + * {
   margin-top: 57px;
 }
-.story-bth {
+.story-btn {
   display: flex;
 }
 
@@ -47,6 +47,7 @@ line-height: 157%;
 
 
 .story-video-btn {
+  z-index: 5;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -54,12 +55,14 @@ line-height: 157%;
 }
 
 .story-video-overlay {
+ 
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+ 
 }
 
 .story-video-object {
